crates/uselesskey-core-negative-pem/tests/snapshots/snapshots_negative_pem__negative_pem_bad_base64.snap
---
source: crates/uselesskey-core-negative-pem/tests/snapshots_negative_pem.rs
expression: result
---
variant: BadBase64
original_len: 58
corrupted_len: 80
first_line: "-----BEGIN TEST KEY-----"
last_line: "-----END TEST KEY-----"
differs_from_original: true
