crates/uselesskey-core-negative-pem/tests/snapshots/snapshots_negative_pem__negative_pem_bad_footer.snap
---
source: crates/uselesskey-core-negative-pem/tests/snapshots_negative_pem.rs
expression: result
---
variant: BadFooter
original_len: 58
corrupted_len: 63
first_line: "-----BEGIN TEST KEY-----"
last_line: "-----END CORRUPTED KEY-----"
differs_from_original: true
