crates/uselesskey-core-negative-pem/tests/snapshots/snapshots_negative_pem__negative_pem_deterministic.snap
---
source: crates/uselesskey-core-negative-pem/tests/snapshots_negative_pem.rs
expression: result
---
variant_string: "corrupt:snapshot-v1"
outputs_match: true
differs_from_original: true
