crates/uselesskey-core-negative-pem/tests/snapshots/snapshots_negative_pem__negative_pem_extra_blank_line.snap
---
source: crates/uselesskey-core-negative-pem/tests/snapshots_negative_pem.rs
expression: result
---
variant: ExtraBlankLine
original_line_count: 3
corrupted_line_count: 4
has_empty_line: true
differs_from_original: true
